# Sidekick

./: GenerateProject.bat  README.md
src/: CMakeLists.txt  main.cpp  nublog.h  types.h
src/core/: display.cpp  display.h  font.cpp  font.h  line.cpp  line.h  model.cpp  model.h  ogl.cpp  ogl.h  shader_gui.cpp  shader_gui.h  texture.cpp  texture.h
src/glsl/: shader_font.cpp  shader_font.h  shader_grid2D.cpp  shader_grid2D.h  shader_gui.cpp  shader_gui.h  shader_line.cpp  shader_line.h  shader_vert_color.cpp  shader_vert_color.h
src/gui/: b_spline.cpp  b_spline.h  builder.h  controlBase.h  grid_2D.cpp  grid_2D.h  menubar.cpp  menubar.h  node.cpp  node.h  nodeLink.cpp  nodeLink.h  spline.cpp  spline.h
src/lib/freetype-2.13.3/: freetype_d.lib
src/lib/glad/: glad_4_6.c  glad_4_6.h
src/resource/: Sidekick.rc  crosshair.cur  res.h
